docs(api): add Get All User
